syntax = "proto3";
package proto;
option go_package = "/proto";

import "entity.proto";

import "google/api/annotations.proto";

// ============================================================================
// Create (FR-345-354)
// ============================================================================

message CreateRequest {
  string name        = 1;  // 3-50 chars
  string description = 2;  // max 500 chars
  string rules       = 3;
}

message CreateResponse {
  Community community = 1;
}

// ============================================================================
// Get (FR-224, FR-230)
// ============================================================================

message GetRequest {
  string community_id = 1;
}

message GetResponse {
  Community community = 1;
}

// ============================================================================
// Update (FR-391-399)
// ============================================================================

message UpdateRequest {
  string community_id         = 1;
  optional string name        = 2;
  optional string description = 3;
  optional string rules       = 4;
}

message UpdateResponse {
  Community community = 1;
}

// ============================================================================
// Delete (FR-225, FR-236, FR-237)
// ============================================================================

message DeleteRequest {
  string community_id = 1;
  bool confirm        = 2;  // must be true
}

message DeleteResponse {
  string message = 1;
}

// ============================================================================
// ListCommunities (FR-226, FR-231)
// ============================================================================

message ListCommunitiesRequest {
  string cursor = 1;
  int32 limit   = 2;
}

message ListCommunitiesResponse {
  repeated Community communities = 1;
  string next_cursor             = 2;
  bool has_more                  = 3;
}

// ============================================================================
// Join (FR-179, FR-181, FR-183)
// ============================================================================

message JoinRequest {
  string community_id = 1;
}

message JoinResponse {
  string message = 1;
}

// ============================================================================
// Leave (FR-180, FR-182, FR-184, FR-185)
// ============================================================================

message LeaveRequest {
  string community_id = 1;
}

message LeaveResponse {
  string message = 1;
}

// ============================================================================
// Ban (FR-228, FR-233-235)
// ============================================================================

message BanRequest {
  string community_id = 1;
  string reason       = 2;
}

message BanResponse {
  string message = 1;
}

// ============================================================================
// Unban (FR-229)
// ============================================================================

message UnbanRequest {
  string community_id = 1;
}

message UnbanResponse {
  string message = 1;
}

// ============================================================================
// TransferOwnership
// ============================================================================

message TransferOwnershipRequest {
  string community_id = 1;
  string new_owner_id = 2;
}

message TransferOwnershipResponse {
  string message = 1;
}

// ============================================================================
// Service Definition
// ============================================================================

service CommunityService {
  // CRUD Operations
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/communities"
      body: "*"
    };
  }

  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/communities/{community_id}"
    };
  }

  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/communities/{community_id}"
      body: "*"
    };
  }

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/communities/{community_id}"
    };
  }

  // List Operations
  rpc ListCommunities(ListCommunitiesRequest) returns (ListCommunitiesResponse) {
    option (google.api.http) = {
      get: "/communities"
    };
  }

  // Membership Operations
  rpc Join(JoinRequest) returns (JoinResponse) {
    option (google.api.http) = {
      post: "/communities/{community_id}/join"
    };
  }

  rpc Leave(LeaveRequest) returns (LeaveResponse) {
    option (google.api.http) = {
      post: "/communities/{community_id}/leave"
    };
  }

  // Moderation Operations
  rpc Ban(BanRequest) returns (BanResponse) {
    option (google.api.http) = {
      post: "/communities/{community_id}/ban"
      body: "*"
    };
  }

  rpc Unban(UnbanRequest) returns (UnbanResponse) {
    option (google.api.http) = {
      post: "/communities/{community_id}/unban"
    };
  }

  // Ownership Operations
  rpc TransferOwnership(TransferOwnershipRequest) returns (TransferOwnershipResponse) {
    option (google.api.http) = {
      post: "/communities/{community_id}/transfer-ownership"
      body: "*"
    };
  }
}
